--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test": "gulp babel && node_modules/mocha/bin/mocha test/node/ -R spec",
     "coveralls": "NODE_ENV=test YOURPACKAGE_COVERAGE=1 ./node_modules/.bin/mocha test/node/ --require blanket --reporter mocha-lcov-reporter | ./node_modules/coveralls/bin/coveralls.js",
     "coverage": "./node_modules/.bin/mocha test/node/ -r blanket -R html-cov > test/coverage.html",
-    "build": "gulp compile"
+    "build": "gulp compile",
+    "pack": "gulp webpack-all"
   },
   "repository": {
     "type": "git",
@@ -29,7 +30,7 @@
     "msi",
     "pharmacode"
   ],
-  "author": "Johan Lindell",
+  "author": "Johan Lindell, PT",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/lindell/JsBarcode/issues"
